# linggen

./: .dockerignore  .gitignore  .mcpregistry_github_token  .mcpregistry_registry_token  CHANGELOG.md  CLAUDE.md  Cargo.toml  FRONTEND_FIXES.md  LICENSE  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  RELEASES.md  RESTART_INSTRUCTIONS.md  SIGNING.md  TESTING_GUIDE.md  build-macos-app.sh  build-release.bat  build-release.sh  build-tauri-app.sh  install-cli-from-app.sh  install-cli.bat  install-cli.sh  linggen-agent.runtime.toml  reproduce_graph.rs  server.json  test_enhancement.sh  uninstall-cli.sh
.claude/: settings.local.json
.claude/agents/: code-improvement-advisor.md
.codex/environments/: environment.toml
.github/workflows/: build-linux.yml  release.yml
.linggen/notes/: New N.md  framework.md  test.md
agents/: coder.md  debugger.md  explorer.md  general.md  ling-mem-autonomous.md  ling-mem.md  ling.md  linggen-guide.md  memory.md  yinyue.md
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/library_templates/policies/: rust-rules.md  security-policy.md
backend/api/library_templates/skills/: architect.md  code-simplifier.md  developer.md  linggen.md  react-pack.md
backend/api/src/: analytics.rs  internal_indexer.rs  job_manager.rs  main.rs  main_new.rs  memory.rs  server.rs
backend/api/src/cli/: client.rs  commands.rs  mod.rs
backend/api/src/handlers/: chat.rs  clear_data.rs  enhance.rs  events.rs  graph.rs  index.rs  index_folder.rs  index_source.rs  intent.rs  internal_rescan.rs  jobs.rs  library.rs  mcp.rs  memory.rs  memory_semantic.rs  mod.rs  notes.rs  preferences.rs  profile.rs  prompts.rs  resources.rs  retry_init.rs  search.rs  settings.rs  shutdown.rs  skills_sh.rs  source_memory.rs  status.rs  upload.rs
backend/architect/: Cargo.toml
backend/architect/src/: cache.rs  graph.rs  lib.rs  overrides.rs  walker.rs
backend/architect/src/parser/: go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
backend/architect/src/resolver/: go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
backend/architect/tests/: integration_test.rs
backend/context/: Cargo.toml
backend/context/src/: lib.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/embeddings/: Cargo.toml
backend/embeddings/src/: chunker.rs  embeddings.rs  lib.rs
backend/enhancement/: Cargo.toml
backend/enhancement/src/: lib.rs  profile_manager.rs
backend/ingestion/: Cargo.toml
backend/ingestion/src/: extract.rs  git.rs  lib.rs  local.rs  service.rs  walker.rs  watcher.rs  web.rs
backend/intent/: Cargo.toml
backend/intent/src/: lib.rs
backend/llm/: Cargo.toml  README.md
backend/llm/examples/: debug_crash.rs  debug_download.rs
backend/llm/src/: downloader.rs  lib.rs  llm_singleton.rs  model_manager.rs  model_utils.rs
backend/mcp-http/: Cargo.toml  README.md
backend/mcp-http/src/: api_client.rs  main.rs  tools.rs
backend/mcp-server/: Cargo.toml  README.md
backend/mcp-server/src/: main.rs
backend/storage/: Cargo.toml
backend/storage/src/: check_fts.rs  internal_index.rs  lib.rs  metadata.rs  preferences.rs  profile.rs
cf-worker/: .gitignore  QUERIES.md  README.md  package-lock.json  package.json  wrangler.toml
cf-worker/migrations/: 0001_create_events_table.sql  0002_create_skill_registry.sql
cf-worker/src/: index.ts  types.ts
deploy/: Dockerfile.linux.multiarch  build-linux-deb.sh  build-linux-multiarch.sh  build-linux.dockerfile  build-macos-app.sh  build-release.sh  build-tauri-app.sh  create-cli-installer-app.sh
doc/: LINGGEN_MEMORY.md  Learn_From_CC.md  Product_Definition1.md  Product_definition2.md  Product_vision.md  RememberMe_Product_Definition.md  agent-spec.md  agentic-loop.md  agents.md  browser-bridge-spec.md  browser-control-spec.md  chat-spec.md  cli.md  code-review-2026-04-06.md  code-style.md  cursor-mcp-setup.md  deploy.md  extension-webview.md  features.md  framework.md  insight.md  internal-index-status.md  internal-index.md  linggen-integration.md  log-spec.md  mcp-spec.md  memory-spec.md  mission-spec.md  models.md  permission-spec.md  plan-spec.md  post.md  post.txt  product-spec.md  session-spec.md  skill-spec.md  skills.md  storage-spec.md  storage.md  store-refactor-plan.md  (+10 more)
doc/.obsidian/: workspace.json
doc/api/: graph-optimization.md
doc/wireframes/: sharing-tab.html
evals/memory/: README.md  check.py  run.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ExtensionApp.tsx  ResourceManager.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
linggen-cli/: Cargo.toml  README.md
linggen-cli/src/: main.rs  manifest.rs
linggen-cli/src/cli/: client.rs  commands.rs  download.rs  installer.rs  jobs.rs  mod.rs  signature.rs  skills.rs  util.rs
linggensite/: index.html  package-lock.json  package.json
linggensite/src/: App.css  App.jsx
missions/condense/: mission.md
missions/dream/: mission.md
prompts/: bailout.toml  idle.toml  plan-execute.toml  plan-mode.toml  response-format.toml  system-prompt.toml  system-reminder.toml  task-bootstrap.toml  tool-result.toml
scripts/: Dockerfile.linux  build-cli.sh  build-linux.sh  build-mac.sh  build-windows.bat  build.sh  lib-common.sh  manual-release.sh  publish-cli-local.sh  release.sh  sync-version.sh
src/: config.rs  logging.rs  main.rs  message.rs  ollama.rs  openai.rs  paths.rs  prompts.rs  tui_client.rs
src/account/: mod.rs
src/agent_manager/: mod.rs  models.rs  proxy_provider.rs  routing.rs  runs.rs
src/cli/: account.rs  daemon.rs  init.rs  login.rs  mod.rs  self_update.rs  skills_cmd.rs  status.rs
src/engine/: actions.rs  browser_gate.rs  capabilities.rs  capability_tools.rs  context.rs  core_memory.rs  dispatch.rs  memory.rs  mod.rs  permission.rs  plan.rs  prompt.rs  render.rs  (+11 more)
ui/: package-lock.json  package.json  vite.config.ts
(+300 files in other folders)
