[package]
name = "linggen"
version = "1.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Linggen — the root system for AI agents. A local-first runtime for AI apps."
repository = "https://github.com/linggen/linggen"

[features]
# Anonymous usage telemetry (install + command events sent to
# linggen.dev/api/track). See src/telemetry/mod.rs for the exact field list.
# Disable at runtime: env LINGGEN_NO_TELEMETRY=1 OR file ~/.linggen/no-telemetry.
# Disable at compile time: cargo build --no-default-features.
default = ["telemetry"]
telemetry = []

[[bin]]
name = "ling"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
headless_chrome = "1.0"
base64 = "0.22"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8.0"
tokio-stream = "0.1"
futures-util = "0.3"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
toml = "1.0"
serde_yml = "0.0.12"
dirs = "6.0"
notify = "8"
grep = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3"
zip = "8"
url = "2"
libc = "0.2"
rand = "0.10.0"
cron = "0.16"
chrono = "0.4"
str0m = "0.19"
gethostname = "1.1.0"
open = "5.3.3"
urlencoding = "2.1.3"
flate2 = "1.1.9"

# any-tts (Kokoro voice). `metal` + `accelerate` are Apple-only candle backends
# — they pull in objc2*, which `compile_error!`s on non-Apple targets — so enable
# them only on macOS. Other platforms build the portable CPU candle backend.
[target.'cfg(target_os = "macos")'.dependencies]
any-tts = { version = "0.1.2", default-features = false, features = ["kokoro", "download", "metal", "accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
any-tts = { version = "0.1.2", default-features = false, features = ["kokoro", "download"] }

# Optimize dependencies even in dev builds. The engine crate itself stays at
# opt-level 0 (fast incremental compiles), but numerical deps like candle
# (Kokoro TTS) run 20-50x faster optimized — unoptimized candle makes synthesis
# unusably slow (~47s/utterance vs ~1s).
[profile.dev.package."*"]
opt-level = 3
