[package]
name = "linggen-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "linggen"
path = "src/main.rs"

authors = ["Liang Huang"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
tabled = "0.16"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
tempfile = "3.10"
minisign = "0.8"
base64 = "0.22"