[package]
name = "linggen-cli"
version = "0.6.2"
edition = "2021"

[[bin]]
name = "linggen"
path = "src/main.rs"

authors = ["Liang Huang"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
tabled = "0.16"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
walkdir = "2.5"
url = "2.5"
dirs = "5.0"
tempfile = "3.10"
minisign = "0.8"
base64 = "0.22"
dotenvy = "0.15.7"
open = "5.3.3"
