[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rememberme-core = { path = "../core" }
ingestion = { path = "../ingestion" }
embeddings = { path = "../embeddings" }
storage = { path = "../storage" }
rememberme-intent = { path = "../intent" }
rememberme-llm = { path = "../llm" }
rememberme-enhancement = { path = "../enhancement" }

tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "=0.4"
dashmap = "6.0"
