[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linggen-server"
path = "src/main.rs"

[dependencies]
linggen-core = { path = "../core" }
linggen-architect = { path = "../architect" }
ingestion = { path = "../ingestion" }
embeddings = { path = "../embeddings" }
storage = { path = "../storage" }
linggen-intent = { path = "../intent" }
linggen-llm = { path = "../llm" }
linggen-enhancement = { path = "../enhancement" }

tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "=0.4"
dashmap = "6.0"
dirs = "5.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"
slug = "0.1"
regex = "1"
serde_yaml = "0.9"

# CLI dependencies were moved to the standalone linggen-cli crate
