[package]
name = "linggen-architect"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tree-sitter for parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
streaming-iterator = "0.1"

# Cargo workspace parsing (Rust workspace heuristic)
toml = "0.8"
glob = "0.3"

# File system
walkdir = "2.5"
ignore = "0.4"

# Logging
tracing = "0.1"

# Async (for background tasks)
tokio = { version = "1", features = ["fs", "sync"] }

# Date/time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
