[package]
name = "linggen-context"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crates
linggen-core = { path = "../core" }
linggen-llm = { path = "../llm" }

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }
