[package]
name = "linggen-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
lancedb = "0.22"
arrow-array = "56.0" # LanceDB dependency often requires arrow
futures = "0.3"
chrono = "=0.4" # Pin to avoid conflict with arrow-arith

# AI / Embeddings
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"
