[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
rememberme-core = { path = "../core" }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"
hf-hub = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
