[package]
name = "embeddings"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }


[dependencies]
linggen-core = { path = "../core" }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
tokenizers = "0.22"
hf-hub = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
