[package]
name = "rememberme-enhancement"
version = "0.1.0"
edition = "2021"

[dependencies]
# Our crates
rememberme-core = { path = "../core" }
rememberme-intent = { path = "../intent" }
storage = { path = "../storage" }
embeddings = { path = "../embeddings" }
rememberme-llm = { path = "../llm" }


# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
