[package]
name = "rememberme-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Candle ML framework
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"

# Tokenization
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Model downloading from Hugging Face
hf-hub = "0.3"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "5.0"
rand = "0.8"

# Async
tokio = { version = "1.42", features = ["full"] }

[features]
default = ["metal"]

# GPU acceleration
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
