[package]
name = "mcp-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }


[dependencies]
rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
schemars = "1.1.0"
chrono = "0.4"
