[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
linggen-core = { path = "../core" }
lancedb = "0.22"
arrow = "56.0"
arrow-array = "56.0"
arrow-schema = "56.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
redb = "3.1"

[dev-dependencies]
tempfile = "3.8"
