[package]
name = "linggen-desktop"
version = "0.5.2"
description = "Linggen Desktop App"
authors = ["Liang Huang"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "image-png"] }
tauri-plugin-process = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-updater = "2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
dirs = "6.0"
chrono = "0.4"
